# food-habits-analysis

./: .gitignore  Analyse.ipynb  DOCUMENTATION.md  README.md  app.py  capture_app.py  debug_data.py  dict_questions_colonnes.py  exploration_preliminaire.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: enquete_alimentation.csv
docs/: Plan.md  README_APP.md
notebooks/: 01_population.ipynb  02_habitudes.ipynb  03_sociologie_acm.ipynb  04_croyances_pratiques.ipynb  05_marketing_choix.ipynb  README.md  build.sh
notebooks/src/: 01_population.md  02_habitudes.md  03_sociologie_acm.md  04_croyances_pratiques.md  05_marketing_choix.md
pages/: 1_Population.py  2_Habitudes.py  3_Sociologie.py  4_Croyances.py  5_Marketing.py
reports/: 01_population.md  02_habitudes.md  03_sociologie_acm.md  04_croyances_pratiques.md  05_marketing_choix.md
scripts/: capture_app.py  debug_data.py  exploration_preliminaire.py  main.py  test_mca.py
utils/: analysis.py  data_loader.py  plotting.py
