[project]
name = "alimentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupytext>=1.19.3",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pingouin>=0.5.5",
    "plotly>=6.5.2",
    "prince>=0.16.5",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.54.0",
    "wordcloud>=1.9.6",
]
